fix: host logo online

--- a/promptbook/templates/base.html
+++ b/promptbook/templates/base.html
@@ -114,7 +114,7 @@
     <nav class="navbar is-fixed-top is-black  has-shadow" role="navigation" aria-label="main navigation">
         <div class="container">
             <div class="navbar-brand">
-              <img class="navbar-item logo" src="{% static 'promptbook/vidura-logo-grn.png' %}" alt="My image">
+              <img class="navbar-item logo" src="https://i.ibb.co/7Vyt7Kw/vidura-logo-grn.png" alt="My image">
                 <a class="navbar-item has-text-white" href="/">
                     <strong class="logo-name">Vidura</strong> &nbsp;<p>Beta</p>
                 </a>
