feat: add cancel button to editor

--- a/promptbook/templates/editor.html
+++ b/promptbook/templates/editor.html
@@ -37,6 +37,7 @@
     <div class="field">
       <div class="control">
         <button type="submit" class="button is-primary">Save</button>
+        <button  class="button is-grey"><a href="{% url 'list_categories' %}"> Cancel</a></button>
       </div>
     </div>
   </form>
