feat: Add SEO related meta tags

--- a/promptbook/templates/base.html
+++ b/promptbook/templates/base.html
@@ -3,9 +3,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vidura</title>
+    <meta charset="utf-8" lang="en">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="Vidura Cloud - Bake your ChatGPT prompts">
+    <meta name="twitter:title" content="Vidura Cloud - Bake your ChatGPT prompts">
+    
+    <meta name="description" content="Welcome to Vidura AI, a ChatGPT Prompt Management System (CPMS) that allows you to easily create, retrieve, and search your prompts.">
+    <meta property="og:description" content="Welcome to Vidura AI, a ChatGPT Prompt Management System (CPMS) that allows you to easily create, retrieve, and search your prompts.">
+    <meta name="twitter:description" content="Are you interested in ChatGPT prompt-engineering ? Vidura AI is here to help">
+    
+    <meta property="og:image" content="https://i.ibb.co/7Vyt7Kw/vidura-logo-grn.png">
+    <meta name="twitter:image" content="https://i.ibb.co/7Vyt7Kw/vidura-logo-grn.png">
+    <title>Vidura Cloud</title>
+    <link rel="stylesheet" href="./assets/css/bulma.min.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/7Vyt7Kw/vidura-logo-grn.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work Sans">
