ui: keep cancel button consistent

--- a/promptbook/templates/list_categories.html
+++ b/promptbook/templates/list_categories.html
@@ -81,6 +81,10 @@
       padding-bottom: 1rem;
     }
 
+    .cancel-category {
+      color: #485fc7;
+    }
+
   </style>
   <div class="container">
     <p>Welcome to Vidura, a ChatGPT Prompt Management System (CPMS) that allows you to easily create, retrieve, and search your prompts.
@@ -117,7 +121,7 @@
       </section>
       <footer class="modal-card-foot">
         <button class="button raised" id="save-category">Save</button>
-        <button class="button" id="cancel-category">Cancel</button>
+        <button class="button cancel-category" id="cancel-category">Cancel</button>
       </footer>
     </div>
   </div>  
