feat: add cosmetic changes to footer

--- a/promptbook/templates/base.html
+++ b/promptbook/templates/base.html
@@ -231,18 +231,17 @@
       <div class="container">
         <div class="columns is-vcentered">
           <div class="column is-6">
-            <p>{% now 'Y' %}. All rights reserved @ <a href="https://happy-pythonist.com/" target="_blank">happy-pythonist.com</a></p>
+            <p>With love <i class="fas fa-heart" style="color: red"></i> from <a href="https://happy-pythonist.com/" target="_blank">happy-pythonist.com</a></p>
+            <p> All rights reserved @ {% now 'Y' %}.
+              <a href="https://github.com/narenaryan/Vidura" target="_blank">
+              GitHub&nbsp<i class="fab fa-github"></i>
+           </a></p>
           </div>
           <div class="column is-2">
-            <a href="https://github.com/narenaryan/Vidura" target="_blank">
-              <i class="fab fa-github"></i> GitHub
-            </a>
+            <a href="https://vidura-docs.s3.us-west-2.amazonaws.com/Terms+%26+Conditions+Vidura+Cloud.pdf" target="_blank">Terms and conditions</a>
           </div>
           <div class="column is-2">
-            <a href="https://vidura-docs.s3.us-west-2.amazonaws.com/Terms+%26+Conditions+Vidura+Cloud.pdf" target="_blank">Terms and Conditions</a>
-          </div>
-          <div class="column is-2">
-            <a href="https://vidura-docs.s3.us-west-2.amazonaws.com/Privacy+Policy+Vidura+cloud.pdf" target="_blank">Privacy</a>
+            <a href="https://vidura-docs.s3.us-west-2.amazonaws.com/Privacy+Policy+Vidura+cloud.pdf" target="_blank">Privacy policy</a>
           </div>
         </div>
       </div>
