fix: remove anchor from tile and add a dedicated button in category card

--- a/promptbook/templates/base.html
+++ b/promptbook/templates/base.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.15.2/css/selectize.default.min.css" integrity="sha512-pTaEn+6gF1IeWv3W1+7X7eM60TFu/agjgoHmYhAfLEU8Phuf6JKiiE8YmsNC0aCgQv4192s4Vai8YZ6VNM6vyQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <style>
       body {
@@ -49,14 +50,15 @@
       .footer {
         max-height: 10px;
       }
-
-      .logo-name {
-        font-size: 1.5rem;
-      }
       
       .logo {
         height: 50px;
         padding-right: 0px;
+      }
+
+      .logo-name {
+        font-size: 1.5rem;
+        font-family: 'Poppins', 'sans-serif';
       }
 
       .selectize-control.multi .selectize-input [data-value]{
