fix: make cancel button css global

--- a/promptbook/templates/list_categories.html
+++ b/promptbook/templates/list_categories.html
@@ -81,10 +81,6 @@
       padding-bottom: 1rem;
     }
 
-    .cancel-category {
-      color: #485fc7;
-    }
-
     .last-updated-btn {
       padding-bottom: 1rem;
     }
@@ -125,7 +121,7 @@
       </section>
       <footer class="modal-card-foot">
         <button class="button raised" id="save-category">Save</button>
-        <button class="button cancel-category" id="cancel-category">Cancel</button>
+        <button class="button cancel-btn" id="cancel-category">Cancel</button>
       </footer>
     </div>
   </div>  
