--- a/promptbook/templates/list_prompts.html
+++ b/promptbook/templates/list_prompts.html
@@ -97,7 +97,7 @@
       </section>
       <footer class="modal-card-foot">
         <button class="button" onclick="saveEditPrompt()">Save</button>
-        <button class="button" onclick="closeEditPrompt()">Cancel</button>
+        <button class="button cancel-btn" onclick="closeEditPrompt()">Cancel</button>
       </footer>
     </div>
   </div>
