--- a/promptbook/templates/base.html
+++ b/promptbook/templates/base.html
@@ -133,6 +133,9 @@
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
       }
       
+      .cancel-btn {
+        color: #485fc7;
+      }
     </style>
 </head>
 <body>
