--- a/promptbook/templates/editor.html
+++ b/promptbook/templates/editor.html
@@ -46,7 +46,7 @@
     <div class="field">
       <div class="control">
         <button type="submit" class="button">Save</button>
-        <button  class="button is-grey"><a href="{% url 'list_categories' %}"> Cancel</a></button>
+        <button  class="button cancel-btn"><a href="{% url 'list_categories' %}"> Cancel</a></button>
       </div>
     </div>
   </form>
