--- a/promptbook/templates/upload_avatar.html
+++ b/promptbook/templates/upload_avatar.html
@@ -5,21 +5,23 @@
   <div class="box">
     <form method="POST" enctype="multipart/form-data">
       {% csrf_token %}
-      <div class="file">
-        <label class="file-label">
-          <input class="file-input" type="file" name="avatar">
-          <span class="file-cta">
-            <span class="file-icon">
-              <i class="fas fa-upload"></i>
+      <div class="container">
+        <div class="file">
+          <label class="file-label">
+            <input class="file-input" type="file" name="avatar">
+            <span class="file-cta">
+              <span class="file-icon">
+                <i class="fas fa-upload"></i>
+              </span>
+              <span class="file-label">
+                Choose an avatar...
+              </span>
             </span>
-            <span class="file-label">
-              Choose an avatar...
-            </span>
-          </span>
-        </label>
+          </label>
+        </div>
       </div>
       <br>
-      <button class="button is-primary" type="submit">Upload</button>
+      <button class="button" type="submit">Upload</button>
     </form>
   </div>
 {% endblock %}
