fix: change the search placeholder

--- a/promptbook/templates/base.html
+++ b/promptbook/templates/base.html
@@ -167,7 +167,7 @@
                         <form method="GET" action="{% url 'search' %}">
                             <div class="field has-addons">
                                 <div class="control">
-                                    <input class="input" type="text" name="q" placeholder="Search prompts">
+                                    <input class="input" type="text" name="q" placeholder="Search anything">
                                 </div>
                                 <div class="control">
                                     <button class="button" type="submit">
