--- a/promptbook/templates/list_prompts.html
+++ b/promptbook/templates/list_prompts.html
@@ -75,7 +75,8 @@
             
               <a href="{% url 'editor' %}?category_id={{ category.id }}" class="add-prompt-btn">
                 <button class="button">
-                  Add prompt
+                  <span class="icon"><i class="fas fa-plus"></i></span>
+                  <span>Add prompt</span>
                 </button>
               </a>
           </div>
