--- a/promptbook/templates/base.html
+++ b/promptbook/templates/base.html
@@ -28,8 +28,10 @@
       }
 
       button {
+        background-color: #7a7a7ad1;
+        border-color: #dbdbdb;
         border: 1px solid rgba(0, 0, 0, 0.2);
-        color: rgba(0, 0, 0, 0.7);
+        color: #fff;
         font-weight: 500;
         transition: box-shadow 0.2s ease-in-out;
       }
@@ -43,8 +45,9 @@
         font-weight: 500;
       }
       .title {
-        font-size: 1rem;
+        font-size: 1.3rem;
         line-height: 4.125;
+        color: #1f1f1f;
       }
 
       .footer {
