--- a/promptbook/templates/editor.html
+++ b/promptbook/templates/editor.html
@@ -32,6 +32,17 @@
       </div>
     </div>
     <div class="field">
+      <label class="label">Is Community Prompt ?</label>
+      <div class="control">
+        <div>
+            <select name="is-public-prompt">
+                  <option value="yes">Yes</option>
+                  <option value="no" selected>No</option>
+            </select>
+        </div>
+      </div>
+    </div>
+    <div class="field">
       <label class="label">Labels</label>
       <div class="control">
         <div>
