--- a/promptbook/templates/list_prompts.html
+++ b/promptbook/templates/list_prompts.html
@@ -64,13 +64,23 @@
       display: inline;
       font-size: 0.7rem;
     }
-    
+    .content-list {
+      padding-top: 2rem;
+    }
   </style>
   <a href="{% url 'list_categories' %}" class="back-button">
     <i class="fas fa-arrow-left"></i> Back to Categories
   </a>
   <h1 class="title">Prompts in category: {{ category.name }}</h1>
-  <div class="columns is-multiline">
+  {% if prompts %}
+  <a href="{% url 'editor' %}?category_id={{ category.id }}" class="add-prompt-btn">
+    <button class="button">
+      <span class="icon"><i class="fas fa-plus"></i></span>
+      <span>Add prompt</span>
+    </button>
+  </a>
+  {% endif %}
+  <div class="columns is-multiline content-list">
     {% for prompt in prompts %}
       <div class="column is-one-third">
         <div class="box">
